--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,6 @@
 [submodule "themes/LoveIt"]
 	path = themes/LoveIt
 	url = https://github.com/dillonzq/LoveIt
-[submodule "themes/eureka"]
-	path = themes/eureka
+[submodule "themes/hugo-eureka"]
+	path = themes/hugo-eureka
 	url = https://github.com/wangchucheng/hugo-eureka
